<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_my_location_black_24dp"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_applications_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_posts"
            android:icon="@drawable/posts_black_24dp"
            android:title="@string/posts" />
        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/ic_show_chart_black_24dp"
            android:title="@string/Rating" />
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_language_black_24dp"
            android:title="@string/language" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_sms_failed_black_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/log_out" />
    </group>

</menu>
