<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_favorite"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/language_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_armenian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/armenain"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_german"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/german"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_spanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spanish"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_russian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/russian"
            android:textSize="24sp" />


    </RadioGroup>

    <Button
        android:id="@+id/btn_confirm"
        android:background="@color/color_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="Ok"
        android:textSize="24sp" />

</LinearLayout>